# nosefart

./: .gitignore  COPYING  Makefile  Makefile.dcp  Makenose.dos  README.BeOS  README.cl-amp  README.dcp  README.dos  README.gnosefart  README.linux  README.md  README.other  README.winamp  README.xmms  in_nsf.BeOS.proj  in_nsf.dsp  in_nsf.dsw  in_nsf.ncb  in_nsf.opt  in_nsf.plg  nosefart.spec
src/: log.c  log.h  nsfinfo.c  nsfinfo.h
src/cl-amp/: AboutWindow.cpp  AboutWindow.h  CL-AmpExport.cpp  ConfigView.cpp  ConfigView.h  ConfigWindow.cpp  ConfigWindow.h  Misc.cpp  Misc.h  NosefartPlugin.cpp  NosefartPlugin.h  bitmaps.h  in_nosefart
src/cl-amp/includes/: Plugin_ConstructorStruct.h  Plugin_Messages.h
src/cpu/nes6502/: nes6502.c
src/gnosefart-1.5/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  gnosefart.desktop  gnosefart.glade  gnosefart.glade.bak  gnosefart.gladep  gnosefart.spec  install-sh  missing
src/gnosefart-1.5/autom4te.cache/: output.0  traces.0
src/gnosefart-1.5/po/: Makefile  Makefile.in
src/gnosefart-1.5/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.c.save  callbacks.h  interface.c  interface.c.bak  interface.h  main.c
src/gnosefart-1.5/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
src/kde/: nosefart.kdelnk  x-nsf.kdelnk
src/linux/: README.linux  main_linux.c
src/machine/: nsf.c  nsf.h
src/msdos/: dos_ints.h  dos_sb.c  dos_sb.h  dostimer.c  dostimer.h  hercules.c  hercules.h  main_dos.c
src/sndhrdw/: fmopl.c  nes_apu.c
src/winamp/: in_nsf.aps  in_nsf.c  in_nsf.rc  makeplug.bat  resource.h  winamp.h
src/xmms/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  configure  configure.in  nosefart_xmms.c  xmms_config.h.in
